Added reads channel

--- a/illumina/nextflow.config
+++ b/illumina/nextflow.config
@@ -1,5 +1,5 @@
 params {
-    reads = "/home/ubuntu/data/belson/projects/projects_2021/napa/input_data/clean_illumina_reads/*/*{1,2}.fastq.gz"
+    reads = "/home/ubuntu/data/belson/projects/projects_2021/napa/input_data/clean_illumina_reads/*/*_R{1,2}.fastq.gz"
     bbRef = "/home/ubuntu/external_tb/references/2019.04.22/adapters.fa"
     ref_genome = "/home/ubuntu/data/belson/reference/2021.04.01/17762-33892_1_71_contigs.fa"
 }
